Fix for wonky loader + scrolling on mobile

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,6 +1,9 @@
+html {
+    height: 100%;
+}
+
 html, body {
     min-height: 100%;
-    height: 100%;
     max-width: 100%;
     position: relative;
     overflow-x: hidden;
@@ -36,6 +39,7 @@ hr.tight {
     top: 0;
     left: 0;
     right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.65);
